--- a/client/package.json
+++ b/client/package.json
@@ -4,31 +4,26 @@
   "private": true,
   "proxy": "http://localhost:5050",
   "dependencies": {
-    "@emotion/react": "^11.5.0",
-    "@emotion/styled": "^11.3.0",
-    "@mui/icons-material": "^5.0.4",
-    "@mui/material": "^5.0.4",
-    "@reduxjs/toolkit": "^1.6.2",
-    "@testing-library/jest-dom": "^5.14.1",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@mui/icons-material": "^5.3.0",
+    "@mui/material": "^5.3.0",
+    "@reduxjs/toolkit": "^1.7.1",
+    "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.0.2",
-    "@types/node": "^16.11.1",
-    "@types/react": "^17.0.31",
-    "@types/react-dom": "^17.0.10",
-    "@types/react-redux": "^7.1.20",
     "add": "^2.0.6",
-    "axios": "^0.24.0",
-    "browserslist": "^4.17.5",
-    "history": "^5.0.1",
+    "axios": "^0.25.0",
+    "browserslist": "^4.19.1",
+    "history": "^5.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-redux": "^7.2.5",
-    "react-router": "^6.0.0-beta.7",
-    "react-router-dom": "^6.0.0-beta.7",
-    "react-scripts": "4.0.3",
+    "react-redux": "^7.2.6",
+    "react-router": "^6.2.1",
+    "react-router-dom": "^6.2.1",
+    "react-scripts": "5.0.0",
     "styled-components": "^5.3.3",
-    "typescript": "~4.4.4",
+    "typescript": "~4.5.5",
     "yarn": "^1.22.17"
   },
   "scripts": {
@@ -53,7 +48,12 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.3.1",
-    "@types/styled-components": "^5.1.15"
+    "@types/react-router-dom": "^5.3.3",
+    "@types/styled-components": "^5.1.20",
+    "@types/jest": "^27.4.0",
+    "@types/node": "^17.0.10",
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
+    "@types/react-redux": "^7.1.22"
   }
 }
